k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: facebook-clone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: lucasfsn/facebook-clone-backend:4.0
          resources:
            limits:
              cpu: '200m'
              memory: '600Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: facebook-clone
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
