k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: facebook-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lucasfsn/facebook-clone-frontend:latest
          resources:
            limits:
              cpu: '200m'
              memory: '500Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: facebook-clone
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
