k8s/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: facebook-clone
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: facebook-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.4
          args: ['start-dev']
          resources:
            limits:
              cpu: '400m'
              memory: '1828Mi'
          ports:
            - containerPort: 8080
              protocol: TCP
