k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: facebook-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              protocol: TCP
          resources:
            limits:
              cpu: '150m'
              memory: '256Mi'
          volumeMounts:
            - name: postgres-config
              mountPath: /docker-entrypoint-initdb.d/
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
              readOnly: false
      volumes:
        - name: postgres-config
          configMap:
            name: postgres-config
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: facebook-clone
spec:
  selector:
    app: postgres
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
